--- a/pages/Details/details.html
+++ b/pages/Details/details.html
@@ -38,7 +38,7 @@ This project is licensed under the "Attribution-NonCommercial-ShareAlike 4.0 Int
         crossorigin="anonymous"></script>
 
     <link href="styles.css" rel="stylesheet">
-    <script type="text/javascript" src="../../../script.js"></script>
+    <script type="text/javascript" src="/Development-Portfolio-PUBLIC/script.js"></script>
     <script type="text/javascript" src="script.js"></script>
 
     <!-- <script src="https://www.youtube.com/iframe_api"></script> -->
