--- a/index.html
+++ b/index.html
@@ -143,14 +143,14 @@ This project is licensed under the "Attribution-NonCommercial-ShareAlike 4.0 Int
                 <div class="arrow right"><i class="bi bi-chevron-compact-right"></i></div>
             </div>
 
-            <div class="title" id="javascript">JavaScript</div>
+            <!-- <div class="title" id="javascript">JavaScript</div>
             <div class="card-wrapper">
                 <div class="arrow left"><i class="bi bi-chevron-compact-left"></i></div>
                 <div class="project_cards" filter="JavaScript">
 
                 </div>
                 <div class="arrow right"><i class="bi bi-chevron-compact-right"></i></div>
-            </div>
+            </div> -->
 
             <div class="title" id="typescript">TypeScript</div>
             <div class="card-wrapper">
