update Google Analytics

--- a/pages/AccessDenied/accessDenied.html
+++ b/pages/AccessDenied/accessDenied.html
@@ -25,13 +25,13 @@ This project is licensed under the "Attribution-NonCommercial-ShareAlike 4.0 Int
     <link href="styles.css" rel="stylesheet">
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PVYCQR0L50"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BLWHBRE7DM"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
-        gtag('config', 'G-PVYCQR0L50');
+        gtag('config', 'G-BLWHBRE7DM');
     </script>
 </head>
 
